Add variables and mixins

--- a/styles/scss/_convert.scss
+++ b/styles/scss/_convert.scss
@@ -1,36 +1,5 @@
 /* General
 ========================================================================== */
-.border {
-	position: relative;
-	padding: 10px 0 0 20px;
-}
-
-.border:before, .border:after {
-	content: '';
-	position: absolute;
-	top: -3px;
-	left: -3px;
-	
-}
-
-.border:before {
-	bottom: -3px;
-	width: 3px;
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#034166), to(transparent));
-	background-image: -webkit-linear-gradient(#034166, transparent);
-	background-image: -moz-linear-gradient(#034166, transparent);
-	background-image: -o-linear-gradient(#034166, transparent);
-}
-
-.border:after {
-	right: -3px;
-	height: 3px;
-	background-image: -webkit-gradient(linear, 0 0, 100% 0, from(#034166), to(transparent));
-	background-image: -webkit-linear-gradient(left, #034166, transparent);
-	background-image: -moz-linear-gradient(left, #034166, transparent);
-	background-image: -o-linear-gradient(left, #034166, transparent);
-}
-
 .fa {
 	display: block;
 }
@@ -74,7 +43,7 @@ section.home header {
 /* Contact
 ========================================================================== */
 html.contact body {
-	background: #000 url('../images/contact.jpg') no-repeat;
+	background: $black url('../images/contact.jpg') no-repeat;
 	background-size: cover;
 }
 
@@ -99,7 +68,7 @@ section.container-contact h1 {
 }
 
 .social-media ul li a {
-	color: #FFF;
+	color: $white;
 }
 
 label, input {
@@ -127,8 +96,8 @@ textarea {
 input[type='submit'] {
 	padding: 10px 0 10px 0;
 	background-color: transparent;
-	color: white;
-	border: 1px solid #FFF;
+	color: $white;
+	border: 1px solid $white;
 	cursor: pointer;
 	-webkit-transition: all 0.4s;
 	-moz-transition: all 0.4s;
@@ -137,8 +106,8 @@ input[type='submit'] {
 }
 
 input[type='submit']:hover {
-	color: #034166;
-	border: 1px solid #034166;
+	color: $color-primary;
+	border: 1px solid $color-primary;
 }
 
 /* Media Queries
@@ -192,7 +161,7 @@ input[type='submit']:hover {
 		position: fixed;
 		padding-top: 16px;
 		height: 100px;
-		background-color: #000;
+		background-color: $black;
 	}
 
 	header.desktop .container-header, footer.desktop ul, section.container-contact {
