--- a/styles/scss/partials/_grids.scss
+++ b/styles/scss/partials/_grids.scss
@@ -16,6 +16,33 @@
 	display: flex;						/* NEW, Spec - Opera 12.1, Firefox 20+ */
 }
 
+.border {
+	position: relative;
+	padding: 10px 0 0 20px;
+}
+
+.border:before, .border:after {
+	content: '';
+	position: absolute;
+	top: -3px;
+	left: -3px;
+	
+}
+
+.border:before {
+	bottom: -3px;
+	width: 3px;
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from($color-primary), to(transparent));
+	@include border-grad-before($color-primary, transparent);
+}
+
+.border:after {
+	right: -3px;
+	height: 3px;
+	background-image: -webkit-gradient(linear, 0 0, 100% 0, from($color-primary), to(transparent));
+	@include border-grad-after($color-primary, transparent);
+}
+
 /* 404 & Thank You
 ========================================================================== */
 .extra {
